--- a/src/styles.css
+++ b/src/styles.css
@@ -8,35 +8,35 @@
     font-size: 1.2em;
 }
 .angular-charts-template .ac-chart {
-    float: left;
-    width: 75%;
+  float: none;
+  width: 100%;
 }
 .angular-charts-template .ac-line {
     fill: none;
     stroke-width: 2px;
 }
 .angular-charts-template table {
-    float: left;
-    max-width: 25%;
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  float: none;
+  max-width: none;
 }
 .angular-charts-template td[ng-bind] {
     display: inline-block;
 }
 
 .angular-charts-template .ac-legend-box {
-    border-radius: 5px;
-    height: 15px;
-    width: 15px;
+    border-radius: 100%;
+    height: 10px;
+    width: 10px;
 }
 
 .ac-tooltip {
     display: block;
     position: absolute;
     border: 2px solid rgba(51, 51, 51, 0.9);
-    background-color: rgba(22, 22, 22, 0.7);
+    background-color: rgba(22, 22, 22, 0.8);
     border-radius: 5px;
     padding: 5px;
     color: white;
